--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -52,8 +52,8 @@
     "y[y == \"RB\"] = 1.0\n",
     "y[y == \"NRB\"] = 0.0\n",
     "\n",
-    "X_train_IVS, X_IVS, y_train_IVS, y_IVS = train_test_split(X, y.astype(float), test_size=0.33, random_state=0)\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X_train_IVS, y_train_IVS, test_size=0.33, random_state=0)\n",
+    "X_train_IVS, X_IVS, y_train_IVS, y_IVS = train_test_split(X, y.astype(float), test_size=0.25, random_state=0)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X_train_IVS, y_train_IVS, test_size=0.25, random_state=0)\n",
     "\n",
     "X_cols = biog.columns[0:41]\n",
     "\n",
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,25 +201,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SdssC      -0.493378\n",
-      "nHDon      -0.459505\n",
-      "nN_N       -0.447186\n",
-      "F02_CN     -0.426871\n",
-      "SM6_B      -0.418151\n",
-      "LOC        -0.411746\n",
-      "F03        -0.391805\n",
-      "Psi_i_1d   -0.381357\n",
-      "F03_CO     -0.354265\n",
-      "SpMax_L    -0.344159\n",
+      "SdssC      -0.497498\n",
+      "nHDon      -0.453868\n",
+      "nN_N       -0.451105\n",
+      "F02_CN     -0.438829\n",
+      "LOC        -0.420888\n",
+      "Psi_i_1d   -0.411507\n",
+      "F03        -0.400766\n",
+      "SM6_B      -0.389450\n",
+      "F03_CO     -0.375346\n",
+      "SpMax_L    -0.364687\n",
       "Name: 0, dtype: float64\n",
-      "The 10 selected features are: ['SdssC', 'nHDon', 'nN_N', 'F02_CN', 'SM6_B', 'LOC', 'F03', 'Psi_i_1d', 'F03_CO', 'SpMax_L']\n"
+      "The 10 selected features are: ['SdssC', 'nHDon', 'nN_N', 'F02_CN', 'LOC', 'Psi_i_1d', 'F03', 'SM6_B', 'F03_CO', 'SpMax_L']\n"
      ]
     }
    ],
@@ -246,23 +246,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Feature:  SpMax_L | Importance:  0.06690662116058628\n",
-      "Feature:  C | Importance:  0.051812353914987196\n",
-      "Feature:  F03 | Importance:  0.050345870873060146\n",
-      "Feature:  SdssC | Importance:  0.08674208590421663\n",
-      "Feature:  LOC | Importance:  0.052008967071320064\n",
-      "Feature:  SM6_L | Importance:  0.0524074184687339\n",
-      "Feature:  F03_CO | Importance:  0.035343463030889824\n",
-      "Feature:  nN_N | Importance:  0.05649352387372817\n",
-      "Feature:  nHDon | Importance:  0.06283164567733486\n",
-      "Feature:  nX | Importance:  0.041586306372976695\n"
+      "Feature:  SpMax_L | Importance:  0.055244456526596514\n",
+      "Feature:  C | Importance:  0.03272108070102635\n",
+      "Feature:  F03 | Importance:  0.03788488590908651\n",
+      "Feature:  SdssC | Importance:  0.1074202113825756\n",
+      "Feature:  LOC | Importance:  0.08221660001461105\n",
+      "Feature:  SM6_L | Importance:  0.055728434716164454\n",
+      "Feature:  F03_CO | Importance:  0.05616762477247047\n",
+      "Feature:  nN_N | Importance:  0.054260107140002345\n",
+      "Feature:  nHDon | Importance:  0.052060154652468264\n",
+      "Feature:  nX | Importance:  0.05650115332165408\n"
      ]
     }
    ],
@@ -292,14 +292,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Index(['SdssC', 'LOC', 'SM6_L', 'F03_CO', 'nArNO2', 'B03', 'C_026', 'F02_CN',\n",
+      "Index(['SdssC', 'SM6_L', 'F03_CO', 'nN_N', 'nArNO2', 'B01', 'B03', 'C_026',\n",
       "       'nHDon', 'nX'],\n",
       "      dtype='object')\n"
      ]
@@ -331,15 +331,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Index(['F01', 'NssssC', 'C', 'F03', 'SdssC', 'LOC', 'SM6_L', 'F03_CO', 'TI2_L',\n",
-      "       'nHDon'],\n",
+      "Index(['SpMax_L', 'F01', 'F04', 'C', 'SdssC', 'SM6_L', 'F03_CO', 'nN_N',\n",
+      "       'C_026', 'nHDon'],\n",
       "      dtype='object')\n"
      ]
     }
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -374,8 +374,8 @@
      "text": [
       "[0, 10, 11, 13, 15, 18, 27, 33, 34, 38]\n",
       "[0, 7, 10, 11, 13, 14, 15, 18, 34, 40]\n",
-      "[11, 13, 14, 15, 19, 24, 32, 33, 34, 40]\n",
-      "[3, 5, 7, 10, 11, 13, 14, 15, 30, 34]\n"
+      "[11, 14, 15, 18, 19, 23, 24, 32, 34, 40]\n",
+      "[0, 3, 4, 7, 11, 14, 15, 18, 32, 34]\n"
      ]
     }
    ],
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -451,19 +451,19 @@
      "output_type": "stream",
      "text": [
       "Feature selection method: Correlation\n",
-      "The best MCC we found was 0.7719 with the hyperparameters {'neighbors': 4, 'weigths': <function gaussian at 0x000001B313DF9F70>, 'f1Score': 0.9656377402446127}\n",
+      "The best MCC we found was 0.7682 with the hyperparameters {'neighbors': 18, 'weigths': <function gaussian at 0x00000268C98ABF70>, 'f1Score': 0.9649965682910089}\n",
       "Feature selection method: Random Forest\n",
-      "The best MCC we found was 0.7711 with the hyperparameters {'neighbors': 12, 'weigths': 'distance', 'f1Score': 0.9665898617511521}\n",
+      "The best MCC we found was 0.7780 with the hyperparameters {'neighbors': 2, 'weigths': <function gaussian at 0x00000268C98ABF70>, 'f1Score': 0.9654218533886584}\n",
       "Feature selection method: StepWise For\n",
-      "The best MCC we found was 0.7863 with the hyperparameters {'neighbors': 8, 'weigths': <function gaussian at 0x000001B313DF9F70>, 'f1Score': 0.9680418361417781}\n",
+      "The best MCC we found was 0.7479 with the hyperparameters {'neighbors': 8, 'weigths': 'distance', 'f1Score': 0.9623545516769336}\n",
       "Feature selection method: StepWise Back\n",
-      "The best MCC we found was 0.8135 with the hyperparameters {'neighbors': 4, 'weigths': 'distance', 'f1Score': 0.9721577726218098}\n",
+      "The best MCC we found was 0.7782 with the hyperparameters {'neighbors': 8, 'weigths': <function gaussian at 0x00000268C98ABF70>, 'f1Score': 0.9663230240549828}\n",
       "Feature selection method: No Feature Selection\n",
-      "The best MCC we found was 0.6470 with the hyperparameters {'neighbors': 2, 'weigths': 'uniform', 'f1Score': 0.9477351916376306}\n",
+      "The best MCC we found was 0.6635 with the hyperparameters {'neighbors': 2, 'weigths': 'uniform', 'f1Score': 0.9500342231348392}\n",
       "\n",
       "Confusion Matrix of best KNN model\n",
-      " [[131  29]\n",
-      " [ 31 818]]\n"
+      " [[110  27]\n",
+      " [ 29 690]]\n"
      ]
     }
    ],
@@ -538,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -546,19 +546,19 @@
      "output_type": "stream",
      "text": [
       "Feature selection method: Correlation\n",
-      "The best MCC we found was 0.6309 with the hyperparameters {'max_depth': 6, 'min_impurity_decrease': 0.05, 'f1Score': 0.9477311889718552}\n",
+      "The best MCC we found was 0.6292 with the hyperparameters {'max_depth': 6, 'min_impurity_decrease': 0.05, 'f1Score': 0.9471544715447154}\n",
       "Feature selection method: Random Forest\n",
-      "The best MCC we found was 0.7084 with the hyperparameters {'max_depth': 4, 'min_impurity_decrease': 0.05, 'f1Score': 0.9556074766355139}\n",
+      "The best MCC we found was 0.6591 with the hyperparameters {'max_depth': 10, 'min_impurity_decrease': 0.05, 'f1Score': 0.9512195121951219}\n",
       "Feature selection method: StepWise For\n",
-      "The best MCC we found was 0.6619 with the hyperparameters {'max_depth': 14, 'min_impurity_decrease': 0.05, 'f1Score': 0.9516685845799769}\n",
+      "The best MCC we found was 0.6425 with the hyperparameters {'max_depth': 16, 'min_impurity_decrease': 0.05, 'f1Score': 0.9507323568575234}\n",
       "Feature selection method: StepWise Back\n",
-      "The best MCC we found was 0.6518 with the hyperparameters {'max_depth': 10, 'min_impurity_decrease': 0.05, 'f1Score': 0.9515116942384484}\n",
+      "The best MCC we found was 0.6921 with the hyperparameters {'max_depth': 6, 'min_impurity_decrease': 0.05, 'f1Score': 0.9561699258260282}\n",
       "Feature selection method: No Feature Selection\n",
-      "The best MCC we found was 0.6134 with the hyperparameters {'max_depth': 14, 'min_impurity_decrease': 0.05, 'f1Score': 0.9480156512017887}\n",
+      "The best MCC we found was 0.5850 with the hyperparameters {'max_depth': 12, 'min_impurity_decrease': 0.05, 'f1Score': 0.9445178335535007}\n",
       "\n",
       "Confusion Matrix of best RF model\n",
-      " [[100  60]\n",
-      " [ 25 824]]\n"
+      " [[ 65  72]\n",
+      " [ 10 709]]\n"
      ]
     }
    ],
@@ -617,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -625,19 +625,19 @@
      "output_type": "stream",
      "text": [
       "Feature selection method: Correlation\n",
-      "The best MCC we found was 0.5872 with the hyperparameters {'n_estimators': 6, 'f1Score': 0.9317507418397627}\n",
+      "The best MCC we found was 0.6372 with the hyperparameters {'n_estimators': 4, 'f1Score': 0.9415041782729805}\n",
       "Feature selection method: Random Forest\n",
-      "The best MCC we found was 0.6984 with the hyperparameters {'n_estimators': 8, 'f1Score': 0.9523248969982343}\n",
+      "The best MCC we found was 0.6941 with the hyperparameters {'n_estimators': 2, 'f1Score': 0.951388888888889}\n",
       "Feature selection method: StepWise For\n",
-      "The best MCC we found was 0.7452 with the hyperparameters {'n_estimators': 4, 'f1Score': 0.9632606199770379}\n",
+      "The best MCC we found was 0.7024 with the hyperparameters {'n_estimators': 2, 'f1Score': 0.9575185434929198}\n",
       "Feature selection method: StepWise Back\n",
-      "The best MCC we found was 0.6945 with the hyperparameters {'n_estimators': 2, 'f1Score': 0.9502958579881656}\n",
+      "The best MCC we found was 0.7269 with the hyperparameters {'n_estimators': 2, 'f1Score': 0.9579020013802623}\n",
       "Feature selection method: No Feature Selection\n",
-      "The best MCC we found was 0.7635 with the hyperparameters {'n_estimators': 4, 'f1Score': 0.9653579676674365}\n",
+      "The best MCC we found was 0.7406 with the hyperparameters {'n_estimators': 2, 'f1Score': 0.9618528610354222}\n",
       "\n",
       "Confusion Matrix of best Bagging model\n",
-      " [[106  54]\n",
-      " [ 10 839]]\n"
+      " [[ 83  54]\n",
+      " [  9 710]]\n"
      ]
     }
    ],
@@ -696,19 +696,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Our Selected Model is a KNN, where k=2, using features selected with a Backwards StepWise and a Gaussian weight function: \n",
+      "Our Selected Model is a KNN, where k=8, using features selected with a Backwards StepWise and a Gaussian weight function: \n",
       "\n",
-      "The MCC is:  0.8483190422946583\n",
+      "The MCC is:  0.8614892016858953\n",
       "The Confusion Matrix is: \n",
-      " [[ 208   46]\n",
-      " [  16 1237]]\n"
+      " [[157  29]\n",
+      " [ 13 942]]\n"
      ]
     }
    ],
@@ -736,7 +736,7 @@
     "X_IVS_processed = ct.transform(X_IVS_scaled)\n",
     "\n",
     "\n",
-    "knn = KNeighborsClassifier(n_neighbors=2, weights=gaussian)\n",
+    "knn = KNeighborsClassifier(n_neighbors=8, weights=gaussian)\n",
     "knn.fit(X_train_IVS_processed, y_train_IVS)\n",
     "\n",
     "preds = knn.predict(X_IVS_processed)\n",
@@ -744,7 +744,7 @@
     "mcc = matthews_corrcoef(y_IVS, preds)\n",
     "cm = confusion_matrix(y_IVS, preds)\n",
     "\n",
-    "print(\"Our Selected Model is a KNN, where k=2, using features selected with a Backwards StepWise and a Gaussian weight function: \\n\")\n",
+    "print(\"Our Selected Model is a KNN, where k=8, using features selected with a Backwards StepWise and a Gaussian weight function: \\n\")\n",
     "print(\"The MCC is: \", mcc)\n",
     "print(\"The Confusion Matrix is: \\n\", cm)"
    ]
@@ -766,7 +766,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12 (main, Apr  4 2022, 05:22:27) [MSC v.1916 64 bit (AMD64)]"
+   "version": "3.9.12"
   },
   "vscode": {
    "interpreter": {
