--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -517,15 +517,7 @@
     "\n",
     "bestKNNCM = confusion_matrix(y_test, preds)\n",
     "\n",
-    "print(\"\\nConfusion Matrix of best KNN model\\n\", bestKNNCM)\n",
-    "\n",
-    "            \n",
-    "# plt.plot(range(2, 20, 2), f1gauss, label=\"gaussian\")\n",
-    "# plt.plot(range(2, 20, 2), f1distance, label=\"distance\")\n",
-    "# plt.plot(range(2, 20, 2), f1noWei, label=\"no weights\")\n",
-    "# plt.legend()\n",
-    "# plt.grid()\n",
-    "# plt.show()"
+    "print(\"\\nConfusion Matrix of best KNN model\\n\", bestKNNCM)\n"
    ]
   },
   {
