--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -246,23 +246,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Feature:  SpMax_L | Importance:  0.055244456526596514\n",
-      "Feature:  C | Importance:  0.03272108070102635\n",
-      "Feature:  F03 | Importance:  0.03788488590908651\n",
-      "Feature:  SdssC | Importance:  0.1074202113825756\n",
-      "Feature:  LOC | Importance:  0.08221660001461105\n",
-      "Feature:  SM6_L | Importance:  0.055728434716164454\n",
-      "Feature:  F03_CO | Importance:  0.05616762477247047\n",
-      "Feature:  nN_N | Importance:  0.054260107140002345\n",
-      "Feature:  nHDon | Importance:  0.052060154652468264\n",
-      "Feature:  nX | Importance:  0.05650115332165408\n"
+      "Feature:  SpMax_L | Importance:  0.060494089426139916\n",
+      "Feature:  C | Importance:  0.03566003734354663\n",
+      "Feature:  F03 | Importance:  0.039737927486255605\n",
+      "Feature:  SdssC | Importance:  0.0994382022658157\n",
+      "Feature:  LOC | Importance:  0.06993717149088713\n",
+      "Feature:  SM6_L | Importance:  0.052890281681962935\n",
+      "Feature:  F03_CO | Importance:  0.05433221712269346\n",
+      "Feature:  nN_N | Importance:  0.04517668194461442\n",
+      "Feature:  nHDon | Importance:  0.07324048446138173\n",
+      "Feature:  nX | Importance:  0.049786795204055975\n"
      ]
     }
    ],
@@ -292,15 +292,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Index(['SdssC', 'SM6_L', 'F03_CO', 'nN_N', 'nArNO2', 'B01', 'B03', 'C_026',\n",
-      "       'nHDon', 'nX'],\n",
+      "Index(['SdssC', 'SM6_L', 'F03_CO', 'nN_N', 'nArNO2', 'B01', 'C_026', 'nHDon',\n",
+      "       'SM6_B', 'nX'],\n",
       "      dtype='object')\n"
      ]
     }
@@ -331,14 +331,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Index(['SpMax_L', 'F01', 'F04', 'C', 'SdssC', 'SM6_L', 'F03_CO', 'nN_N',\n",
+      "Index(['F01', 'C', 'SdssC', 'SM6_L', 'F03_CO', 'nN_N', 'SpPosA_B', 'nCrt',\n",
       "       'C_026', 'nHDon'],\n",
       "      dtype='object')\n"
      ]
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -374,8 +374,8 @@
      "text": [
       "[0, 10, 11, 13, 15, 18, 27, 33, 34, 38]\n",
       "[0, 7, 10, 11, 13, 14, 15, 18, 34, 40]\n",
-      "[11, 14, 15, 18, 19, 23, 24, 32, 34, 40]\n",
-      "[0, 3, 4, 7, 11, 14, 15, 18, 32, 34]\n"
+      "[11, 14, 15, 18, 19, 23, 32, 34, 38, 40]\n",
+      "[3, 7, 11, 14, 15, 18, 21, 31, 32, 34]\n"
      ]
     }
    ],
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -451,19 +451,19 @@
      "output_type": "stream",
      "text": [
       "Feature selection method: Correlation\n",
-      "The best MCC we found was 0.7682 with the hyperparameters {'neighbors': 18, 'weigths': <function gaussian at 0x00000268C98ABF70>, 'f1Score': 0.9649965682910089}\n",
+      "The best MCC we found was 0.7682 with the hyperparameters {'neighbors': 18, 'weigths': <function gaussian at 0x00000268D220AEE0>, 'f1Score': 0.9649965682910089}\n",
       "Feature selection method: Random Forest\n",
-      "The best MCC we found was 0.7780 with the hyperparameters {'neighbors': 2, 'weigths': <function gaussian at 0x00000268C98ABF70>, 'f1Score': 0.9654218533886584}\n",
+      "The best MCC we found was 0.7780 with the hyperparameters {'neighbors': 2, 'weigths': <function gaussian at 0x00000268D220AEE0>, 'f1Score': 0.9654218533886584}\n",
       "Feature selection method: StepWise For\n",
-      "The best MCC we found was 0.7479 with the hyperparameters {'neighbors': 8, 'weigths': 'distance', 'f1Score': 0.9623545516769336}\n",
+      "The best MCC we found was 0.7447 with the hyperparameters {'neighbors': 6, 'weigths': 'uniform', 'f1Score': 0.9626104690686608}\n",
       "Feature selection method: StepWise Back\n",
-      "The best MCC we found was 0.7782 with the hyperparameters {'neighbors': 8, 'weigths': <function gaussian at 0x00000268C98ABF70>, 'f1Score': 0.9663230240549828}\n",
+      "The best MCC we found was 0.7384 with the hyperparameters {'neighbors': 16, 'weigths': <function gaussian at 0x00000268D220AEE0>, 'f1Score': 0.9621621621621621}\n",
       "Feature selection method: No Feature Selection\n",
       "The best MCC we found was 0.6635 with the hyperparameters {'neighbors': 2, 'weigths': 'uniform', 'f1Score': 0.9500342231348392}\n",
       "\n",
       "Confusion Matrix of best KNN model\n",
-      " [[110  27]\n",
-      " [ 29 690]]\n"
+      " [[107  30]\n",
+      " [ 47 672]]\n"
      ]
     }
    ],
@@ -530,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -538,19 +538,19 @@
      "output_type": "stream",
      "text": [
       "Feature selection method: Correlation\n",
-      "The best MCC we found was 0.6292 with the hyperparameters {'max_depth': 6, 'min_impurity_decrease': 0.05, 'f1Score': 0.9471544715447154}\n",
+      "The best MCC we found was 0.6361 with the hyperparameters {'max_depth': 14, 'min_impurity_decrease': 0.05, 'f1Score': 0.946793997271487}\n",
       "Feature selection method: Random Forest\n",
-      "The best MCC we found was 0.6591 with the hyperparameters {'max_depth': 10, 'min_impurity_decrease': 0.05, 'f1Score': 0.9512195121951219}\n",
+      "The best MCC we found was 0.6627 with the hyperparameters {'max_depth': 8, 'min_impurity_decrease': 0.05, 'f1Score': 0.9519945909398242}\n",
       "Feature selection method: StepWise For\n",
-      "The best MCC we found was 0.6425 with the hyperparameters {'max_depth': 16, 'min_impurity_decrease': 0.05, 'f1Score': 0.9507323568575234}\n",
+      "The best MCC we found was 0.6143 with the hyperparameters {'max_depth': 10, 'min_impurity_decrease': 0.05, 'f1Score': 0.9472981987991994}\n",
       "Feature selection method: StepWise Back\n",
-      "The best MCC we found was 0.6921 with the hyperparameters {'max_depth': 6, 'min_impurity_decrease': 0.05, 'f1Score': 0.9561699258260282}\n",
+      "The best MCC we found was 0.6868 with the hyperparameters {'max_depth': 4, 'min_impurity_decrease': 0.05, 'f1Score': 0.9559412550066756}\n",
       "Feature selection method: No Feature Selection\n",
-      "The best MCC we found was 0.5850 with the hyperparameters {'max_depth': 12, 'min_impurity_decrease': 0.05, 'f1Score': 0.9445178335535007}\n",
+      "The best MCC we found was 0.5790 with the hyperparameters {'max_depth': 18, 'min_impurity_decrease': 0.05, 'f1Score': 0.9438943894389439}\n",
       "\n",
       "Confusion Matrix of best RF model\n",
-      " [[ 65  72]\n",
-      " [ 10 709]]\n"
+      " [[ 67  70]\n",
+      " [  8 711]]\n"
      ]
     }
    ],
@@ -609,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -621,15 +621,15 @@
       "Feature selection method: Random Forest\n",
       "The best MCC we found was 0.6941 with the hyperparameters {'n_estimators': 2, 'f1Score': 0.951388888888889}\n",
       "Feature selection method: StepWise For\n",
-      "The best MCC we found was 0.7024 with the hyperparameters {'n_estimators': 2, 'f1Score': 0.9575185434929198}\n",
+      "The best MCC we found was 0.7218 with the hyperparameters {'n_estimators': 2, 'f1Score': 0.9572413793103448}\n",
       "Feature selection method: StepWise Back\n",
-      "The best MCC we found was 0.7269 with the hyperparameters {'n_estimators': 2, 'f1Score': 0.9579020013802623}\n",
+      "The best MCC we found was 0.7269 with the hyperparameters {'n_estimators': 4, 'f1Score': 0.9579020013802623}\n",
       "Feature selection method: No Feature Selection\n",
       "The best MCC we found was 0.7406 with the hyperparameters {'n_estimators': 2, 'f1Score': 0.9618528610354222}\n",
       "\n",
       "Confusion Matrix of best Bagging model\n",
-      " [[ 83  54]\n",
-      " [  9 710]]\n"
+      " [[100  37]\n",
+      " [ 25 694]]\n"
      ]
     }
    ],
@@ -688,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
