--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
@@ -246,23 +246,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Feature:  SpMax_L | Importance:  0.060494089426139916\n",
-      "Feature:  C | Importance:  0.03566003734354663\n",
-      "Feature:  F03 | Importance:  0.039737927486255605\n",
-      "Feature:  SdssC | Importance:  0.0994382022658157\n",
-      "Feature:  LOC | Importance:  0.06993717149088713\n",
-      "Feature:  SM6_L | Importance:  0.052890281681962935\n",
-      "Feature:  F03_CO | Importance:  0.05433221712269346\n",
-      "Feature:  nN_N | Importance:  0.04517668194461442\n",
-      "Feature:  nHDon | Importance:  0.07324048446138173\n",
-      "Feature:  nX | Importance:  0.049786795204055975\n"
+      "Feature:  SpMax_L | Importance:  0.05446797911305484\n",
+      "Feature:  C | Importance:  0.03443021592182938\n",
+      "Feature:  F03 | Importance:  0.040435473803016084\n",
+      "Feature:  SdssC | Importance:  0.08519496192498861\n",
+      "Feature:  LOC | Importance:  0.06943558237665579\n",
+      "Feature:  SM6_L | Importance:  0.054891207651519246\n",
+      "Feature:  F03_CO | Importance:  0.05428828513681049\n",
+      "Feature:  nN_N | Importance:  0.061660318099339036\n",
+      "Feature:  nHDon | Importance:  0.05362346458992875\n",
+      "Feature:  nX | Importance:  0.05717782814562563\n"
      ]
     }
    ],
@@ -292,15 +292,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Index(['SdssC', 'SM6_L', 'F03_CO', 'nN_N', 'nArNO2', 'B01', 'C_026', 'nHDon',\n",
-      "       'SM6_B', 'nX'],\n",
+      "Index(['SdssC', 'SM6_L', 'F03_CO', 'nN_N', 'nArNO2', 'B01', 'B03', 'C_026',\n",
+      "       'nHDon', 'nX'],\n",
       "      dtype='object')\n"
      ]
     }
@@ -331,15 +331,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Index(['F01', 'C', 'SdssC', 'SM6_L', 'F03_CO', 'nN_N', 'SpPosA_B', 'nCrt',\n",
-      "       'C_026', 'nHDon'],\n",
+      "Index(['F01', 'NssssC', 'C', 'SdssC', 'LOC', 'SM6_L', 'F03_CO', 'Me', 'nN_N',\n",
+      "       'SpMax_B'],\n",
       "      dtype='object')\n"
      ]
     }
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
     {
@@ -374,8 +374,8 @@
      "text": [
       "[0, 10, 11, 13, 15, 18, 27, 33, 34, 38]\n",
       "[0, 7, 10, 11, 13, 14, 15, 18, 34, 40]\n",
-      "[11, 14, 15, 18, 19, 23, 32, 34, 38, 40]\n",
-      "[3, 7, 11, 14, 15, 18, 21, 31, 32, 34]\n"
+      "[11, 14, 15, 18, 19, 23, 24, 32, 34, 40]\n",
+      "[3, 5, 7, 11, 13, 14, 15, 16, 18, 35]\n"
      ]
     }
    ],
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [
     {
@@ -451,19 +451,19 @@
      "output_type": "stream",
      "text": [
       "Feature selection method: Correlation\n",
-      "The best MCC we found was 0.7682 with the hyperparameters {'neighbors': 18, 'weigths': <function gaussian at 0x00000268D220AEE0>, 'f1Score': 0.9649965682910089}\n",
+      "The best MCC we found was 0.7568 with the hyperparameters {'neighbors': 5, 'weigths': <function gaussian at 0x00000268D220A3A0>, 'f1Score': 0.9628}\n",
       "Feature selection method: Random Forest\n",
-      "The best MCC we found was 0.7780 with the hyperparameters {'neighbors': 2, 'weigths': <function gaussian at 0x00000268D220AEE0>, 'f1Score': 0.9654218533886584}\n",
+      "The best MCC we found was 0.7649 with the hyperparameters {'neighbors': 3, 'weigths': <function gaussian at 0x00000268D220A3A0>, 'f1Score': 0.9642}\n",
       "Feature selection method: StepWise For\n",
-      "The best MCC we found was 0.7447 with the hyperparameters {'neighbors': 6, 'weigths': 'uniform', 'f1Score': 0.9626104690686608}\n",
+      "The best MCC we found was 0.7479 with the hyperparameters {'neighbors': 7, 'weigths': 'distance', 'f1Score': 0.9624}\n",
       "Feature selection method: StepWise Back\n",
-      "The best MCC we found was 0.7384 with the hyperparameters {'neighbors': 16, 'weigths': <function gaussian at 0x00000268D220AEE0>, 'f1Score': 0.9621621621621621}\n",
+      "The best MCC we found was 0.7538 with the hyperparameters {'neighbors': 3, 'weigths': 'uniform', 'f1Score': 0.9641}\n",
       "Feature selection method: No Feature Selection\n",
-      "The best MCC we found was 0.6635 with the hyperparameters {'neighbors': 2, 'weigths': 'uniform', 'f1Score': 0.9500342231348392}\n",
+      "The best MCC we found was 0.6425 with the hyperparameters {'neighbors': 3, 'weigths': <function gaussian at 0x00000268D220A3A0>, 'f1Score': 0.9493}\n",
       "\n",
       "Confusion Matrix of best KNN model\n",
-      " [[107  30]\n",
-      " [ 47 672]]\n"
+      " [[ 91  46]\n",
+      " [  9 710]]\n"
      ]
     }
    ],
@@ -492,7 +492,7 @@
     "    X_train = X_train_processed[:, selec_feat_indexes[i]]\n",
     "    X_test = X_test_processed[:, selec_feat_indexes[i]]\n",
     "\n",
-    "    for k in range(2, 20, 2):\n",
+    "    for k in range(3, 11, 2):\n",
     "        for wei in [gaussian, \"distance\", \"uniform\"]:\n",
     "            knn = KNeighborsClassifier(n_neighbors=k, weights=wei)\n",
     "            knn.fit(X_train, y_train)\n",
@@ -502,7 +502,7 @@
     "                bestMCC = mcc\n",
     "                bestMCCParams[\"neighbors\"] = k\n",
     "                bestMCCParams[\"weigths\"] = wei\n",
-    "                bestMCCParams[\"f1Score\"] = f1_score(y_test, preds)\n",
+    "                bestMCCParams[\"f1Score\"] = round(f1_score(y_test, preds), 4)\n",
     "\n",
     "    print(f\"The best MCC we found was {'{:.4f}'.format(bestMCC)} with the hyperparameters {bestMCCParams}\")\n",
     "\n",
@@ -530,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
@@ -538,19 +538,19 @@
      "output_type": "stream",
      "text": [
       "Feature selection method: Correlation\n",
-      "The best MCC we found was 0.6361 with the hyperparameters {'max_depth': 14, 'min_impurity_decrease': 0.05, 'f1Score': 0.946793997271487}\n",
+      "The best MCC we found was 0.6321 with the hyperparameters {'max_depth': 16, 'min_impurity_decrease': 0.05, 'f1Score': 0.9461}\n",
       "Feature selection method: Random Forest\n",
-      "The best MCC we found was 0.6627 with the hyperparameters {'max_depth': 8, 'min_impurity_decrease': 0.05, 'f1Score': 0.9519945909398242}\n",
+      "The best MCC we found was 0.6925 with the hyperparameters {'max_depth': 10, 'min_impurity_decrease': 0.05, 'f1Score': 0.955}\n",
       "Feature selection method: StepWise For\n",
-      "The best MCC we found was 0.6143 with the hyperparameters {'max_depth': 10, 'min_impurity_decrease': 0.05, 'f1Score': 0.9472981987991994}\n",
+      "The best MCC we found was 0.6404 with the hyperparameters {'max_depth': 12, 'min_impurity_decrease': 0.05, 'f1Score': 0.9484}\n",
       "Feature selection method: StepWise Back\n",
-      "The best MCC we found was 0.6868 with the hyperparameters {'max_depth': 4, 'min_impurity_decrease': 0.05, 'f1Score': 0.9559412550066756}\n",
+      "The best MCC we found was 0.6644 with the hyperparameters {'max_depth': 4, 'min_impurity_decrease': 0.05, 'f1Score': 0.9531}\n",
       "Feature selection method: No Feature Selection\n",
-      "The best MCC we found was 0.5790 with the hyperparameters {'max_depth': 18, 'min_impurity_decrease': 0.05, 'f1Score': 0.9438943894389439}\n",
+      "The best MCC we found was 0.5743 with the hyperparameters {'max_depth': 14, 'min_impurity_decrease': 0.05, 'f1Score': 0.9434}\n",
       "\n",
       "Confusion Matrix of best RF model\n",
-      " [[ 67  70]\n",
-      " [  8 711]]\n"
+      " [[ 75  62]\n",
+      " [ 14 705]]\n"
      ]
     }
    ],
@@ -574,7 +574,7 @@
     "                        rf = RandomForestClassifier(n_estimators=50, criterion=\"entropy\", max_depth=md, min_impurity_decrease=mid)\n",
     "                        rf.fit(X_train, y_train)\n",
     "                        preds = rf.predict(X_test)\n",
-    "                        f1Score = f1_score(y_test, preds) \n",
+    "                        f1Score = round(f1_score(y_test, preds), 4)\n",
     "                        mcc = matthews_corrcoef(y_test, preds) \n",
     "                        \n",
     "                        if(mcc > bestMCC):\n",
@@ -609,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [
     {
@@ -617,19 +617,19 @@
      "output_type": "stream",
      "text": [
       "Feature selection method: Correlation\n",
-      "The best MCC we found was 0.6372 with the hyperparameters {'n_estimators': 4, 'f1Score': 0.9415041782729805}\n",
+      "The best MCC we found was 0.6372 with the hyperparameters {'n_estimators': 4, 'f1Score': 0.9415}\n",
       "Feature selection method: Random Forest\n",
-      "The best MCC we found was 0.6941 with the hyperparameters {'n_estimators': 2, 'f1Score': 0.951388888888889}\n",
+      "The best MCC we found was 0.6941 with the hyperparameters {'n_estimators': 2, 'f1Score': 0.9514}\n",
       "Feature selection method: StepWise For\n",
-      "The best MCC we found was 0.7218 with the hyperparameters {'n_estimators': 2, 'f1Score': 0.9572413793103448}\n",
+      "The best MCC we found was 0.7024 with the hyperparameters {'n_estimators': 2, 'f1Score': 0.9575}\n",
       "Feature selection method: StepWise Back\n",
-      "The best MCC we found was 0.7269 with the hyperparameters {'n_estimators': 4, 'f1Score': 0.9579020013802623}\n",
+      "The best MCC we found was 0.6800 with the hyperparameters {'n_estimators': 2, 'f1Score': 0.9502}\n",
       "Feature selection method: No Feature Selection\n",
-      "The best MCC we found was 0.7406 with the hyperparameters {'n_estimators': 2, 'f1Score': 0.9618528610354222}\n",
+      "The best MCC we found was 0.7406 with the hyperparameters {'n_estimators': 2, 'f1Score': 0.9619}\n",
       "\n",
       "Confusion Matrix of best Bagging model\n",
-      " [[100  37]\n",
-      " [ 25 694]]\n"
+      " [[ 83  54]\n",
+      " [  9 710]]\n"
      ]
     }
    ],
@@ -658,7 +658,7 @@
     "        if(bestMCC < mcc):\n",
     "            bestMCC = mcc\n",
     "            bestMCCParams[\"n_estimators\"] = n\n",
-    "            bestMCCParams[\"f1Score\"] =  f1_score(y_test, preds)\n",
+    "            bestMCCParams[\"f1Score\"] =  round(f1_score(y_test, preds), 4)\n",
     "\n",
     "\n",
     "    print(f\"The best MCC we found was {'{:.4f}'.format(bestMCC)} with the hyperparameters {bestMCCParams}\")\n",
@@ -683,12 +683,12 @@
    "source": [
     "## Fitting and validating the best model \n",
     "\n",
-    "(KNN | Step Back | Gaussian | k=2)"
+    "(KNN | Random Forest Feature Selection | Gaussian | k=3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
@@ -697,17 +697,14 @@
      "text": [
       "Our Selected Model is a KNN, where k=8, using features selected with a Backwards StepWise and a Gaussian weight function: \n",
       "\n",
-      "The MCC is:  0.8614892016858953\n",
+      "The MCC is:  0.8184\n",
       "The Confusion Matrix is: \n",
-      " [[157  29]\n",
-      " [ 13 942]]\n"
+      " [[151  35]\n",
+      " [ 20 935]]\n"
      ]
     }
    ],
    "source": [
-    "# X_train = X_train_processed[:, step_back_index]\n",
-    "# X_test = X_test_processed[:, step_back_index]\n",
-    "\n",
     "scaler = StandardScaler()\n",
     "scaler.fit(X_train_IVS)\n",
     "\n",
@@ -724,11 +721,11 @@
     "\n",
     "ct.fit(X_train_IVS_scaled)\n",
     "\n",
-    "X_train_IVS_processed = ct.transform(X_train_IVS_scaled)\n",
-    "X_IVS_processed = ct.transform(X_IVS_scaled)\n",
+    "X_train_IVS_processed = ct.transform(X_train_IVS_scaled)[:, rand_forest_index]\n",
+    "X_IVS_processed = ct.transform(X_IVS_scaled)[:, rand_forest_index]\n",
     "\n",
     "\n",
-    "knn = KNeighborsClassifier(n_neighbors=8, weights=gaussian)\n",
+    "knn = KNeighborsClassifier(n_neighbors=3, weights=gaussian)\n",
     "knn.fit(X_train_IVS_processed, y_train_IVS)\n",
     "\n",
     "preds = knn.predict(X_IVS_processed)\n",
@@ -737,7 +734,7 @@
     "cm = confusion_matrix(y_IVS, preds)\n",
     "\n",
     "print(\"Our Selected Model is a KNN, where k=8, using features selected with a Backwards StepWise and a Gaussian weight function: \\n\")\n",
-    "print(\"The MCC is: \", mcc)\n",
+    "print(\"The MCC is: \", round(mcc, 4))\n",
     "print(\"The Confusion Matrix is: \\n\", cm)"
    ]
   }
