--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [
     {
@@ -246,23 +246,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Feature:  SpMax_L | Importance:  0.05446797911305484\n",
-      "Feature:  C | Importance:  0.03443021592182938\n",
-      "Feature:  F03 | Importance:  0.040435473803016084\n",
-      "Feature:  SdssC | Importance:  0.08519496192498861\n",
-      "Feature:  LOC | Importance:  0.06943558237665579\n",
-      "Feature:  SM6_L | Importance:  0.054891207651519246\n",
-      "Feature:  F03_CO | Importance:  0.05428828513681049\n",
-      "Feature:  nN_N | Importance:  0.061660318099339036\n",
-      "Feature:  nHDon | Importance:  0.05362346458992875\n",
-      "Feature:  nX | Importance:  0.05717782814562563\n"
+      "Feature:  SpMax_L | Importance:  0.05093190273712753\n",
+      "Feature:  C | Importance:  0.0374662555311535\n",
+      "Feature:  F03 | Importance:  0.04067737135291805\n",
+      "Feature:  SdssC | Importance:  0.09098124165311916\n",
+      "Feature:  LOC | Importance:  0.06384749604173685\n",
+      "Feature:  SM6_L | Importance:  0.054555819053825866\n",
+      "Feature:  F03_CO | Importance:  0.0526591992444783\n",
+      "Feature:  nN_N | Importance:  0.06320962564952287\n",
+      "Feature:  nHDon | Importance:  0.05516325739048229\n",
+      "Feature:  nX | Importance:  0.05639872161159975\n"
      ]
     }
    ],
@@ -292,15 +292,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Index(['SdssC', 'SM6_L', 'F03_CO', 'nN_N', 'nArNO2', 'B01', 'B03', 'C_026',\n",
-      "       'nHDon', 'nX'],\n",
+      "Index(['SdssC', 'SM6_L', 'F03_CO', 'nN_N', 'nArNO2', 'nCIR', 'B01', 'C_026',\n",
+      "       'nHDon', 'nArCOOR'],\n",
       "      dtype='object')\n"
      ]
     }
@@ -331,15 +331,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Index(['F01', 'NssssC', 'C', 'SdssC', 'LOC', 'SM6_L', 'F03_CO', 'Me', 'nN_N',\n",
-      "       'SpMax_B'],\n",
+      "Index(['F01', 'C', 'SdssC', 'SM6_L', 'F03_CO', 'nN_N', 'SpPosA_B', 'nCrt',\n",
+      "       'C_026', 'SpMax_B'],\n",
       "      dtype='object')\n"
      ]
     }
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [
     {
@@ -374,8 +374,8 @@
      "text": [
       "[0, 10, 11, 13, 15, 18, 27, 33, 34, 38]\n",
       "[0, 7, 10, 11, 13, 14, 15, 18, 34, 40]\n",
-      "[11, 14, 15, 18, 19, 23, 24, 32, 34, 40]\n",
-      "[3, 5, 7, 11, 13, 14, 15, 16, 18, 35]\n"
+      "[11, 14, 15, 18, 19, 22, 23, 32, 34, 39]\n",
+      "[3, 7, 11, 14, 15, 18, 21, 31, 32, 35]\n"
      ]
     }
    ],
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [
     {
@@ -451,19 +451,19 @@
      "output_type": "stream",
      "text": [
       "Feature selection method: Correlation\n",
-      "The best MCC we found was 0.7568 with the hyperparameters {'neighbors': 5, 'weigths': <function gaussian at 0x00000268D220A3A0>, 'f1Score': 0.9628}\n",
+      "The best MCC we found was 0.7568 with the hyperparameters {'neighbors': 5, 'weigths': <function gaussian at 0x00000268D5490670>, 'f1Score': 0.9628}\n",
       "Feature selection method: Random Forest\n",
-      "The best MCC we found was 0.7649 with the hyperparameters {'neighbors': 3, 'weigths': <function gaussian at 0x00000268D220A3A0>, 'f1Score': 0.9642}\n",
+      "The best MCC we found was 0.7649 with the hyperparameters {'neighbors': 3, 'weigths': <function gaussian at 0x00000268D5490670>, 'f1Score': 0.9642}\n",
       "Feature selection method: StepWise For\n",
-      "The best MCC we found was 0.7479 with the hyperparameters {'neighbors': 7, 'weigths': 'distance', 'f1Score': 0.9624}\n",
+      "The best MCC we found was 0.7437 with the hyperparameters {'neighbors': 3, 'weigths': 'uniform', 'f1Score': 0.9616}\n",
       "Feature selection method: StepWise Back\n",
-      "The best MCC we found was 0.7538 with the hyperparameters {'neighbors': 3, 'weigths': 'uniform', 'f1Score': 0.9641}\n",
+      "The best MCC we found was 0.7231 with the hyperparameters {'neighbors': 5, 'weigths': 'uniform', 'f1Score': 0.9602}\n",
       "Feature selection method: No Feature Selection\n",
-      "The best MCC we found was 0.6425 with the hyperparameters {'neighbors': 3, 'weigths': <function gaussian at 0x00000268D220A3A0>, 'f1Score': 0.9493}\n",
+      "The best MCC we found was 0.6425 with the hyperparameters {'neighbors': 3, 'weigths': <function gaussian at 0x00000268D5490670>, 'f1Score': 0.9493}\n",
       "\n",
       "Confusion Matrix of best KNN model\n",
-      " [[ 91  46]\n",
-      " [  9 710]]\n"
+      " [[ 90  47]\n",
+      " [ 14 705]]\n"
      ]
     }
    ],
@@ -530,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [
     {
@@ -538,19 +538,19 @@
      "output_type": "stream",
      "text": [
       "Feature selection method: Correlation\n",
-      "The best MCC we found was 0.6321 with the hyperparameters {'max_depth': 16, 'min_impurity_decrease': 0.05, 'f1Score': 0.9461}\n",
+      "The best MCC we found was 0.6325 with the hyperparameters {'max_depth': 18, 'min_impurity_decrease': 0.05, 'f1Score': 0.9479}\n",
       "Feature selection method: Random Forest\n",
-      "The best MCC we found was 0.6925 with the hyperparameters {'max_depth': 10, 'min_impurity_decrease': 0.05, 'f1Score': 0.955}\n",
+      "The best MCC we found was 0.6581 with the hyperparameters {'max_depth': 10, 'min_impurity_decrease': 0.05, 'f1Score': 0.9503}\n",
       "Feature selection method: StepWise For\n",
-      "The best MCC we found was 0.6404 with the hyperparameters {'max_depth': 12, 'min_impurity_decrease': 0.05, 'f1Score': 0.9484}\n",
+      "The best MCC we found was 0.6471 with the hyperparameters {'max_depth': 18, 'min_impurity_decrease': 0.05, 'f1Score': 0.949}\n",
       "Feature selection method: StepWise Back\n",
-      "The best MCC we found was 0.6644 with the hyperparameters {'max_depth': 4, 'min_impurity_decrease': 0.05, 'f1Score': 0.9531}\n",
+      "The best MCC we found was 0.6604 with the hyperparameters {'max_depth': 8, 'min_impurity_decrease': 0.05, 'f1Score': 0.9528}\n",
       "Feature selection method: No Feature Selection\n",
-      "The best MCC we found was 0.5743 with the hyperparameters {'max_depth': 14, 'min_impurity_decrease': 0.05, 'f1Score': 0.9434}\n",
+      "The best MCC we found was 0.5682 with the hyperparameters {'max_depth': 16, 'min_impurity_decrease': 0.05, 'f1Score': 0.9428}\n",
       "\n",
       "Confusion Matrix of best RF model\n",
-      " [[ 75  62]\n",
-      " [ 14 705]]\n"
+      " [[ 72  65]\n",
+      " [ 15 704]]\n"
      ]
     }
    ],
@@ -609,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [
     {
@@ -621,15 +621,15 @@
       "Feature selection method: Random Forest\n",
       "The best MCC we found was 0.6941 with the hyperparameters {'n_estimators': 2, 'f1Score': 0.9514}\n",
       "Feature selection method: StepWise For\n",
-      "The best MCC we found was 0.7024 with the hyperparameters {'n_estimators': 2, 'f1Score': 0.9575}\n",
+      "The best MCC we found was 0.7233 with the hyperparameters {'n_estimators': 6, 'f1Score': 0.9601}\n",
       "Feature selection method: StepWise Back\n",
-      "The best MCC we found was 0.6800 with the hyperparameters {'n_estimators': 2, 'f1Score': 0.9502}\n",
+      "The best MCC we found was 0.7250 with the hyperparameters {'n_estimators': 2, 'f1Score': 0.9589}\n",
       "Feature selection method: No Feature Selection\n",
       "The best MCC we found was 0.7406 with the hyperparameters {'n_estimators': 2, 'f1Score': 0.9619}\n",
       "\n",
       "Confusion Matrix of best Bagging model\n",
-      " [[ 83  54]\n",
-      " [  9 710]]\n"
+      " [[ 93  44]\n",
+      " [ 18 701]]\n"
      ]
     }
    ],
@@ -688,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [
     {
