random state in feature selection

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 178,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,12 +196,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Correlation"
+    "### Correlation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [
     {
@@ -241,28 +241,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Random Forest Feature Selection"
+    "### Random Forest Feature Selection"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Feature:  SpMax_L | Importance:  0.05093190273712753\n",
-      "Feature:  C | Importance:  0.0374662555311535\n",
-      "Feature:  F03 | Importance:  0.04067737135291805\n",
-      "Feature:  SdssC | Importance:  0.09098124165311916\n",
-      "Feature:  LOC | Importance:  0.06384749604173685\n",
-      "Feature:  SM6_L | Importance:  0.054555819053825866\n",
-      "Feature:  F03_CO | Importance:  0.0526591992444783\n",
-      "Feature:  nN_N | Importance:  0.06320962564952287\n",
-      "Feature:  nHDon | Importance:  0.05516325739048229\n",
-      "Feature:  nX | Importance:  0.05639872161159975\n"
+      "Feature:  SpMax_L | Importance:  0.06106725094288645\n",
+      "Feature:  C | Importance:  0.029995472017299595\n",
+      "Feature:  F03 | Importance:  0.03959764601713044\n",
+      "Feature:  SdssC | Importance:  0.09716670008946071\n",
+      "Feature:  LOC | Importance:  0.06300495239999916\n",
+      "Feature:  SM6_L | Importance:  0.053959750360603784\n",
+      "Feature:  F03_CO | Importance:  0.049693961165154\n",
+      "Feature:  nN_N | Importance:  0.052325489347075385\n",
+      "Feature:  nHDon | Importance:  0.053039972681158426\n",
+      "Feature:  nX | Importance:  0.061025657008724164\n"
      ]
     }
    ],
@@ -271,7 +271,7 @@
     "from sklearn.feature_selection import SelectFromModel\n",
     "\n",
     "\n",
-    "sel = SelectFromModel(RandomForestClassifier(), max_features=10)\n",
+    "sel = SelectFromModel(RandomForestClassifier(random_state=0), max_features=10)\n",
     "sel.fit(X_train_processed, y_train)\n",
     "\n",
     "selectedForest = []\n",
@@ -287,20 +287,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "StepWise (Forward)"
+    "### StepWise (Forward)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Index(['SdssC', 'SM6_L', 'F03_CO', 'nN_N', 'nArNO2', 'nCIR', 'B01', 'C_026',\n",
-      "       'nHDon', 'nArCOOR'],\n",
+      "Index(['F01', 'SdssC', 'SM6_L', 'F03_CO', 'nN_N', 'nArNO2', 'B01', 'C_026',\n",
+      "       'nHDon', 'nX'],\n",
       "      dtype='object')\n"
      ]
     }
@@ -311,7 +311,7 @@
     "\n",
     "N,M = X_train_processed.shape\n",
     "\n",
-    "dtc = DecisionTreeClassifier()\n",
+    "dtc = DecisionTreeClassifier(random_state=0)\n",
     "sfs = SequentialFeatureSelector(dtc, n_features_to_select=10, direction=\"forward\")\n",
     "\n",
     "sfs.fit(X_train_processed, y_train)\n",
@@ -326,26 +326,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "StepWise (BackWard)"
+    "### StepWise (BackWard)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Index(['F01', 'C', 'SdssC', 'SM6_L', 'F03_CO', 'nN_N', 'SpPosA_B', 'nCrt',\n",
-      "       'C_026', 'SpMax_B'],\n",
+      "Index(['F01', 'C', 'SdssC', 'SM6_L', 'F03_CO', 'Me', 'nN_N', 'nCrt', 'C_026',\n",
+      "       'nHDon'],\n",
       "      dtype='object')\n"
      ]
     }
    ],
    "source": [
-    "dtc = DecisionTreeClassifier()\n",
+    "dtc = DecisionTreeClassifier(random_state=0)\n",
     "sfs = SequentialFeatureSelector(dtc, n_features_to_select=10, direction=\"backward\")\n",
     "\n",
     "sfs.fit(X_train_processed, y_train)\n",
@@ -357,15 +357,16 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Indexes of Features Selcted"
+    "Indexes of Features Selected"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [
     {
@@ -374,8 +375,8 @@
      "text": [
       "[0, 10, 11, 13, 15, 18, 27, 33, 34, 38]\n",
       "[0, 7, 10, 11, 13, 14, 15, 18, 34, 40]\n",
-      "[11, 14, 15, 18, 19, 22, 23, 32, 34, 39]\n",
-      "[3, 7, 11, 14, 15, 18, 21, 31, 32, 35]\n"
+      "[3, 11, 14, 15, 18, 19, 23, 32, 34, 40]\n",
+      "[3, 7, 11, 14, 15, 16, 18, 31, 32, 34]\n"
      ]
     }
    ],
@@ -399,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -421,12 +422,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Modelos"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Importar metricas de classificação"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -438,12 +447,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## KNN"
+    "### KNN"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [
     {
@@ -451,19 +460,19 @@
      "output_type": "stream",
      "text": [
       "Feature selection method: Correlation\n",
-      "The best MCC we found was 0.7568 with the hyperparameters {'neighbors': 5, 'weigths': <function gaussian at 0x00000268D5490670>, 'f1Score': 0.9628}\n",
+      "The best MCC we found was 0.7568 with the hyperparameters {'neighbors': 5, 'weigths': <function gaussian at 0x00000268D5490DC0>, 'f1Score': 0.9628}\n",
       "Feature selection method: Random Forest\n",
-      "The best MCC we found was 0.7649 with the hyperparameters {'neighbors': 3, 'weigths': <function gaussian at 0x00000268D5490670>, 'f1Score': 0.9642}\n",
+      "The best MCC we found was 0.7649 with the hyperparameters {'neighbors': 3, 'weigths': <function gaussian at 0x00000268D5490DC0>, 'f1Score': 0.9642}\n",
       "Feature selection method: StepWise For\n",
-      "The best MCC we found was 0.7437 with the hyperparameters {'neighbors': 3, 'weigths': 'uniform', 'f1Score': 0.9616}\n",
+      "The best MCC we found was 0.7415 with the hyperparameters {'neighbors': 7, 'weigths': 'distance', 'f1Score': 0.9608}\n",
       "Feature selection method: StepWise Back\n",
-      "The best MCC we found was 0.7231 with the hyperparameters {'neighbors': 5, 'weigths': 'uniform', 'f1Score': 0.9602}\n",
+      "The best MCC we found was 0.7490 with the hyperparameters {'neighbors': 5, 'weigths': 'uniform', 'f1Score': 0.9634}\n",
       "Feature selection method: No Feature Selection\n",
-      "The best MCC we found was 0.6425 with the hyperparameters {'neighbors': 3, 'weigths': <function gaussian at 0x00000268D5490670>, 'f1Score': 0.9493}\n",
+      "The best MCC we found was 0.6425 with the hyperparameters {'neighbors': 3, 'weigths': <function gaussian at 0x00000268D5490DC0>, 'f1Score': 0.9493}\n",
       "\n",
       "Confusion Matrix of best KNN model\n",
       " [[ 90  47]\n",
-      " [ 14 705]]\n"
+      " [ 11 708]]\n"
      ]
     }
    ],
@@ -525,12 +534,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Random Forest"
+    "### Random Forest"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [
     {
@@ -538,19 +547,19 @@
      "output_type": "stream",
      "text": [
       "Feature selection method: Correlation\n",
-      "The best MCC we found was 0.6325 with the hyperparameters {'max_depth': 18, 'min_impurity_decrease': 0.05, 'f1Score': 0.9479}\n",
+      "The best MCC we found was 0.6425 with the hyperparameters {'max_depth': 10, 'min_impurity_decrease': 0.05, 'f1Score': 0.9493}\n",
       "Feature selection method: Random Forest\n",
-      "The best MCC we found was 0.6581 with the hyperparameters {'max_depth': 10, 'min_impurity_decrease': 0.05, 'f1Score': 0.9503}\n",
+      "The best MCC we found was 0.6978 with the hyperparameters {'max_depth': 18, 'min_impurity_decrease': 0.05, 'f1Score': 0.9557}\n",
       "Feature selection method: StepWise For\n",
-      "The best MCC we found was 0.6471 with the hyperparameters {'max_depth': 18, 'min_impurity_decrease': 0.05, 'f1Score': 0.949}\n",
+      "The best MCC we found was 0.6201 with the hyperparameters {'max_depth': 8, 'min_impurity_decrease': 0.05, 'f1Score': 0.9483}\n",
       "Feature selection method: StepWise Back\n",
-      "The best MCC we found was 0.6604 with the hyperparameters {'max_depth': 8, 'min_impurity_decrease': 0.05, 'f1Score': 0.9528}\n",
+      "The best MCC we found was 0.6862 with the hyperparameters {'max_depth': 12, 'min_impurity_decrease': 0.05, 'f1Score': 0.9558}\n",
       "Feature selection method: No Feature Selection\n",
-      "The best MCC we found was 0.5682 with the hyperparameters {'max_depth': 16, 'min_impurity_decrease': 0.05, 'f1Score': 0.9428}\n",
+      "The best MCC we found was 0.5803 with the hyperparameters {'max_depth': 6, 'min_impurity_decrease': 0.05, 'f1Score': 0.944}\n",
       "\n",
       "Confusion Matrix of best RF model\n",
-      " [[ 72  65]\n",
-      " [ 15 704]]\n"
+      " [[ 71  66]\n",
+      " [  9 710]]\n"
      ]
     }
    ],
@@ -604,12 +613,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Bagging Classifier"
+    "### Bagging Classifier"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [
     {
@@ -621,15 +630,15 @@
       "Feature selection method: Random Forest\n",
       "The best MCC we found was 0.6941 with the hyperparameters {'n_estimators': 2, 'f1Score': 0.9514}\n",
       "Feature selection method: StepWise For\n",
-      "The best MCC we found was 0.7233 with the hyperparameters {'n_estimators': 6, 'f1Score': 0.9601}\n",
+      "The best MCC we found was 0.7349 with the hyperparameters {'n_estimators': 4, 'f1Score': 0.9613}\n",
       "Feature selection method: StepWise Back\n",
-      "The best MCC we found was 0.7250 with the hyperparameters {'n_estimators': 2, 'f1Score': 0.9589}\n",
+      "The best MCC we found was 0.7218 with the hyperparameters {'n_estimators': 4, 'f1Score': 0.9572}\n",
       "Feature selection method: No Feature Selection\n",
       "The best MCC we found was 0.7406 with the hyperparameters {'n_estimators': 2, 'f1Score': 0.9619}\n",
       "\n",
       "Confusion Matrix of best Bagging model\n",
-      " [[ 93  44]\n",
-      " [ 18 701]]\n"
+      " [[100  37]\n",
+      " [ 24 695]]\n"
      ]
     }
    ],
@@ -688,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 190,
    "metadata": {},
    "outputs": [
     {
